--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -40,9 +40,51 @@ a:hover {
   widows: 100%;
   height: 750px;
   position: relative;
+  padding: 0 0 20px 0;
 }
 
 #chart-horder svg {
   width: 100%;
   height: 100%;
+}
+
+#nobel-map,
+#nobel-winner,
+#nobel-bar,
+#nobel-time,
+#nobel-list {
+  position: absolute;
+}
+
+#nobel-time {
+  top: 0;
+  height: 150px;
+  width: 100%;
+}
+
+#nobel-map {
+  background: azure;
+  top: 160px;
+  width: 700px;
+  height: 350px;
+}
+
+#nobel-winner {
+  top: 510px;
+  left: 700px;
+  height: 240px;
+  width: 300px;
+}
+
+#nobel-bar {
+  top: 510px;
+  height: 240px;
+  widows: 700px;
+}
+
+#nobel-list {
+  top: 160px;
+  height: 340px;
+  left: 700px;
+  padding-left: 10px;
 }
