--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -91,6 +91,16 @@ a:hover {
   fill: blue;
 }
 
+.axis {
+  font: 10px sans-serif;
+}
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
 #nobel-list {
   top: 160px;
   height: 340px;
