add animation to the bar chart

--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -88,12 +88,13 @@ a:hover {
 }
 
 .bar {
-  fill: blue;
+  fill: steelblue;
 }
 
 .axis {
   font: 10px sans-serif;
 }
+
 .axis path,
 .axis line {
   fill: none;
