--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #fefefe;
+  background: #fefefe;
   width: 1000px;
   margin: 0 auto;
 }
@@ -12,6 +12,10 @@ a:link {
 
 a:hover {
   text-decoration: underline;
+}
+
+#chart {
+  position: relative;
 }
 
 #nbviz {
@@ -37,13 +41,13 @@ a:hover {
 }
 
 #chart-holder {
-  widows: 100%;
+  width: 100%;
   height: 750px;
   position: relative;
   padding: 0 0 20px 0;
 }
 
-#chart-horder svg {
+#chart-holder svg {
   width: 100%;
   height: 100%;
 }
@@ -79,12 +83,7 @@ a:hover {
 #nobel-bar {
   top: 510px;
   height: 240px;
-  widows: 700px;
-}
-
-#nobel-bar {
-  width: 600px;
-  height: 400px;
+  width: 700px;
 }
 
 .bar {
@@ -105,6 +104,7 @@ a:hover {
 #nobel-list {
   top: 160px;
   height: 340px;
+  width: 290px;
   left: 700px;
   padding-left: 10px;
 }
