--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -66,11 +66,40 @@ a:hover {
   width: 100%;
 }
 
+/* MAP STYLES */
 #nobel-map {
   background: azure;
   top: 160px;
   width: 700px;
   height: 350px;
+}
+
+#nobel-map {
+  background: azure;
+}
+
+.graticule {
+  fill: none;
+  stroke: #777;
+  stroke-width: 0.5px;
+  stroke-opacity: 0.5;
+}
+
+.land {
+  fill: #ddd;
+}
+
+.boundary {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 0.5px;
+}
+
+.country {
+  fill: rgb(175, 195, 186); /* light green */
+}
+.country.active {
+  fill: rgb(155, 175, 166); /* dark green */
 }
 
 #nobel-winner {
