--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -98,8 +98,20 @@ a:hover {
 .country {
   fill: rgb(175, 195, 186); /* light green */
 }
+
 .country.active {
   fill: rgb(155, 175, 166); /* dark green */
+}
+
+.centroid {
+  fill: red;
+  fill-opacity: 0.3;
+  pointer-events: none;
+}
+
+.centroid.active {
+  fill: goldenrod;
+  fill-opacity: 0.6;
 }
 
 #nobel-winner {
