--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -114,6 +114,27 @@ a:hover {
   fill-opacity: 0.6;
 }
 
+#map-tooltip {
+  position: absolute;
+  pointer-events: none;
+  color: #eee;
+  font-size: 12px;
+  opacity: 0.7; /* a little transparent */
+  background: #222;
+  border: 2px solid #555;
+  border-color: goldenrod;
+  padding: 10px;
+  left: -999px;
+}
+
+#map-tooltip h2 {
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+/*  */
+
 #nobel-winner {
   top: 510px;
   left: 700px;
