--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -272,6 +272,28 @@ a:hover {
   margin: 0px;
 }
 
+/* nobel-country */
+#bar-tooltip {
+  position: absolute;
+  pointer-events: none;
+  text-align: center;
+  color: #eee;
+  font-size: 12px;
+  opacity: 0.7;
+  background: #222;
+  border: 2px solid #555;
+  border-color: goldenrod;
+  padding: 10px;
+  left: -999px;
+  border-radius: 10px;
+}
+
+#bar-tooltip h2 {
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+}
+
 /* nobel-birth-month */
 
 #nobel-birth-month {
