add filter category, gender and country

--- a/016_/static/css/style.css
+++ b/016_/static/css/style.css
@@ -14,6 +14,11 @@ a:hover {
   text-decoration: underline;
 }
 
+/* menu */
+#gender-select {
+  margin-left: 20px;
+}
+
 #chart {
   position: relative;
 }
